@@ -10,6 +10,5 @@ NetBSD packaging by Ben Collver et al.
 SuSE packaging by Stefan Dirsch.
 RPM spec file by Soos Peter.
 
-cabextract uses GNU versions of the getopt_long(), mktime() and fnmatch()
-functions, (C) Free Software Foundation, if not found as part of the
-operating system.
+cabextract uses GNU versions of the getopt_long() and fnmatch() functions,
+(C) Free Software Foundation, if not found as part of the operating system.
